# t-sasaki915

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CNAME  README.md  stack.yaml  t-sasaki-net-server.cabal  t-sasaki-net.cabal
.github/workflows/: build_and_deploy.yaml
app/: Main.hs  Page.hs  Statics.hs  TSasakiNet.hs  TSasakiNet.hs-boot
app/Page/: BasicInfoInHaskell.hs  Home.hs  ItemCalculator.hs  Minesweeper.hs
app/TSasakiNet/: BasicInfoInHaskellR.hs  BasicInfoInHaskellR.hs-boot  HomeR.hs  HomeR.hs-boot  HsMakefilesR.hs  HsMakefilesR.hs-boot  SiteInformationR.hs  SiteInformationR.hs-boot  StyleSheet.hs
static/: index.css
